@@ -1,5 +1,9 @@
 2004-03-04  Theodore A. Roth  <troth@openavr.org>
 
+	* include/avr/boot.h: Define BLBnx bit positions. [Bug #7469]
+
+2004-03-04  Theodore A. Roth  <troth@openavr.org>
+
 	* NEWS: Add note about boot API changes.
 	* include/avr/boot.h: Change example to show a more efficient usage
 	of the API.
